[package]
name = "tauri-audio-streamer"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_audio_streamer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
webrtc = "0.12"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
thiserror = "2"
gstreamer = "0.23.5"
gstreamer-app = "0.23.5"
gstreamer-webrtc = "0.23.5"
gstreamer-sdp = "0.23.5"
futures = "0.3"

